{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 459,
  "lineage": "b956b227-3a06-948e-09c3-c621f0a7c9a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "central",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0836e5ee813182368",
            "arn": "arn:aws:ec2:us-east-1:916273703597:elastic-ip/eipalloc-0836e5ee813182368",
            "association_id": "eipassoc-08af671ea3f01c664",
            "domain": "vpc",
            "id": "eipalloc-0836e5ee813182368",
            "instance": "i-0783bfcf713eee5f2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0983dd0d55c2637f2",
            "private_dns": "ip-10-57-1-122.ec2.internal",
            "private_ip": "10.57.1.122",
            "public_dns": "ec2-54-83-3-9.compute-1.amazonaws.com",
            "public_ip": "54.83.3.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sih-25057-prod-central-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-central-eip",
              "Project": "sih-25057"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_dynamodb_table.textract_product_images",
            "aws_iam_instance_profile.central",
            "aws_iam_instance_profile.worker",
            "aws_iam_role.central",
            "aws_iam_role.worker",
            "aws_instance.central",
            "aws_instance.worker",
            "aws_s3_bucket.product_images",
            "aws_security_group.central",
            "aws_security_group.worker",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "central",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e39bafa7e7303d",
            "arn": "arn:aws:ec2:us-east-1:916273703597:instance/i-0783bfcf713eee5f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sih-25057-prod-central-profile",
            "id": "i-0783bfcf713eee5f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0983dd0d55c2637f2",
            "private_dns": "ip-10-57-1-122.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.57.1.122",
            "public_dns": "ec2-100-27-28-182.compute-1.amazonaws.com",
            "public_ip": "100.27.28.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "sih-25057"
                },
                "throughput": 125,
                "volume_id": "vol-0729d2ab2a5f0f19b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0272fb44fc9ff3286",
            "tags": {
              "Name": "sih-25057-prod-central",
              "Role": "central"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-central",
              "Project": "sih-25057",
              "Role": "central"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-07c8f204289e1dc95"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_dynamodb_table.textract_product_images",
            "aws_iam_instance_profile.central",
            "aws_iam_instance_profile.worker",
            "aws_iam_role.central",
            "aws_iam_role.worker",
            "aws_instance.worker",
            "aws_s3_bucket.product_images",
            "aws_security_group.central",
            "aws_security_group.worker",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e39bafa7e7303d",
            "arn": "arn:aws:ec2:us-east-1:916273703597:instance/i-0a982c037f8c65545",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sih-25057-prod-worker-profile",
            "id": "i-0a982c037f8c65545",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-061d9a7a82a66dc10",
            "private_dns": "ip-10-57-1-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.57.1.201",
            "public_dns": "ec2-54-174-144-34.compute-1.amazonaws.com",
            "public_ip": "54.174.144.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "sih-25057"
                },
                "throughput": 125,
                "volume_id": "vol-087b7143339137e85",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0272fb44fc9ff3286",
            "tags": {
              "Name": "sih-25057-prod-worker-1",
              "Role": "worker"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-worker-1",
              "Project": "sih-25057",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04b927b2935193496"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_dynamodb_table.textract_product_images",
            "aws_iam_instance_profile.worker",
            "aws_iam_role.worker",
            "aws_s3_bucket.product_images",
            "aws_security_group.worker",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e39bafa7e7303d",
            "arn": "arn:aws:ec2:us-east-1:916273703597:instance/i-0413feff2f252ec05",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sih-25057-prod-worker-profile",
            "id": "i-0413feff2f252ec05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e75efa061892d2c",
            "private_dns": "ip-10-57-2-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.57.2.6",
            "public_dns": "ec2-3-80-117-90.compute-1.amazonaws.com",
            "public_ip": "3.80.117.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "sih-25057"
                },
                "throughput": 125,
                "volume_id": "vol-00d20b4a665d97856",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f88749dcf775947",
            "tags": {
              "Name": "sih-25057-prod-worker-2",
              "Role": "worker"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-worker-2",
              "Project": "sih-25057",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04b927b2935193496"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_dynamodb_table.textract_product_images",
            "aws_iam_instance_profile.worker",
            "aws_iam_role.worker",
            "aws_s3_bucket.product_images",
            "aws_security_group.worker",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e39bafa7e7303d",
            "arn": "arn:aws:ec2:us-east-1:916273703597:instance/i-0f8440f8d5a899ec9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sih-25057-prod-worker-profile",
            "id": "i-0f8440f8d5a899ec9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-035690238789b0365",
            "private_dns": "ip-10-57-1-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.57.1.200",
            "public_dns": "ec2-100-53-81-68.compute-1.amazonaws.com",
            "public_ip": "100.53.81.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "sih-25057"
                },
                "throughput": 125,
                "volume_id": "vol-0ce924f4230759b74",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0272fb44fc9ff3286",
            "tags": {
              "Name": "sih-25057-prod-worker-3",
              "Role": "worker"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-worker-3",
              "Project": "sih-25057",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04b927b2935193496"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_dynamodb_table.textract_product_images",
            "aws_iam_instance_profile.worker",
            "aws_iam_role.worker",
            "aws_s3_bucket.product_images",
            "aws_security_group.worker",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e39bafa7e7303d",
            "arn": "arn:aws:ec2:us-east-1:916273703597:instance/i-0b24f016c4afa7a75",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sih-25057-prod-worker-profile",
            "id": "i-0b24f016c4afa7a75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ed484a36ba054ab",
            "private_dns": "ip-10-57-2-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.57.2.149",
            "public_dns": "ec2-54-147-169-35.compute-1.amazonaws.com",
            "public_ip": "54.147.169.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "sih-25057"
                },
                "throughput": 125,
                "volume_id": "vol-0d9f0e47ab4149c08",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f88749dcf775947",
            "tags": {
              "Name": "sih-25057-prod-worker-4",
              "Role": "worker"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-worker-4",
              "Project": "sih-25057",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04b927b2935193496"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_dynamodb_table.textract_product_images",
            "aws_iam_instance_profile.worker",
            "aws_iam_role.worker",
            "aws_s3_bucket.product_images",
            "aws_security_group.worker",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e39bafa7e7303d",
            "arn": "arn:aws:ec2:us-east-1:916273703597:instance/i-05b9e22b318b36f55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sih-25057-prod-worker-profile",
            "id": "i-05b9e22b318b36f55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c15c7b79cd85366e",
            "private_dns": "ip-10-57-1-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.57.1.216",
            "public_dns": "ec2-13-218-199-77.compute-1.amazonaws.com",
            "public_ip": "13.218.199.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "sih-25057"
                },
                "throughput": 125,
                "volume_id": "vol-096704a0a0eb07002",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0272fb44fc9ff3286",
            "tags": {
              "Name": "sih-25057-prod-worker-5",
              "Role": "worker"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-worker-5",
              "Project": "sih-25057",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-04b927b2935193496"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_dynamodb_table.textract_product_images",
            "aws_iam_instance_profile.worker",
            "aws_iam_role.worker",
            "aws_s3_bucket.product_images",
            "aws_security_group.worker",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:internet-gateway/igw-0602d7bf2fbec4dbc",
            "id": "igw-0602d7bf2fbec4dbc",
            "owner_id": "916273703597",
            "tags": {
              "Name": "sih-25057-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-igw",
              "Project": "sih-25057"
            },
            "vpc_id": "vpc-045f3f80eabb215a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:route-table/rtb-0552b5e66467b4c12",
            "id": "rtb-0552b5e66467b4c12",
            "owner_id": "916273703597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0602d7bf2fbec4dbc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sih-25057-prod-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-public-rt",
              "Project": "sih-25057"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f3f80eabb215a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b50230df6ec01c11",
            "route_table_id": "rtb-0552b5e66467b4c12",
            "subnet_id": "subnet-0272fb44fc9ff3286"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6d2a1350afdf3d1",
            "route_table_id": "rtb-0552b5e66467b4c12",
            "subnet_id": "subnet-05f88749dcf775947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "central",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:security-group/sg-07c8f204289e1dc95",
            "description": "Security group for the central dispatcher",
            "egress": [],
            "id": "sg-07c8f204289e1dc95",
            "ingress": [],
            "name": "sih-25057-prod-central-sg",
            "name_prefix": "",
            "owner_id": "916273703597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sih-25057-prod-central-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-central-sg",
              "Project": "sih-25057"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f3f80eabb215a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:security-group/sg-04b927b2935193496",
            "description": "Security group for scraping worker nodes",
            "egress": [],
            "id": "sg-04b927b2935193496",
            "ingress": [],
            "name": "sih-25057-prod-worker-sg",
            "name_prefix": "",
            "owner_id": "916273703597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sih-25057-prod-worker-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-worker-sg",
              "Project": "sih-25057"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f3f80eabb215a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:subnet/subnet-0272fb44fc9ff3286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.57.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0272fb44fc9ff3286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916273703597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sih-25057-prod-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-public-1",
              "Project": "sih-25057",
              "Tier": "public"
            },
            "vpc_id": "vpc-045f3f80eabb215a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:subnet/subnet-05f88749dcf775947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.57.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f88749dcf775947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916273703597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sih-25057-prod-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-public-2",
              "Project": "sih-25057",
              "Tier": "public"
            },
            "vpc_id": "vpc-045f3f80eabb215a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:vpc/vpc-045f3f80eabb215a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.57.0.0/16",
            "default_network_acl_id": "acl-024c04bed074fc18f",
            "default_route_table_id": "rtb-02dd10153fa1816d1",
            "default_security_group_id": "sg-0db446848c7bd6922",
            "dhcp_options_id": "dopt-09d2d9433c144476a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045f3f80eabb215a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02dd10153fa1816d1",
            "owner_id": "916273703597",
            "tags": {
              "Name": "sih-25057-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sih-25057-prod-vpc",
              "Project": "sih-25057"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "central_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:security-group-rule/sgr-0be694490edc35ad7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0be694490edc35ad7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07c8f204289e1dc95",
            "security_group_rule_id": "sgr-0be694490edc35ad7",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "sih-25057"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.central",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "worker_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:security-group-rule/sgr-09192af1deafe4ed9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09192af1deafe4ed9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b927b2935193496",
            "security_group_rule_id": "sgr-09192af1deafe4ed9",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "sih-25057"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "central_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:security-group-rule/sgr-0bd97bd958e5b3786",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-0bd97bd958e5b3786",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07c8f204289e1dc95",
            "security_group_rule_id": "sgr-0bd97bd958e5b3786",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "sih-25057"
            },
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.central",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "central_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:security-group-rule/sgr-09b00d7c9b60b3c39",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09b00d7c9b60b3c39",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07c8f204289e1dc95",
            "security_group_rule_id": "sgr-09b00d7c9b60b3c39",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "sih-25057"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.central",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "worker_from_central",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:security-group-rule/sgr-037fc3d792d1232cc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-037fc3d792d1232cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07c8f204289e1dc95",
            "security_group_id": "sg-04b927b2935193496",
            "security_group_rule_id": "sgr-037fc3d792d1232cc",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "sih-25057"
            },
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.central",
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "worker_public_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:security-group-rule/sgr-0d52a5fecb7b68db8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-0d52a5fecb7b68db8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b927b2935193496",
            "security_group_rule_id": "sgr-0d52a5fecb7b68db8",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "sih-25057"
            },
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "worker_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916273703597:security-group-rule/sgr-0ac5abb7812053937",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ac5abb7812053937",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b927b2935193496",
            "security_group_rule_id": "sgr-0ac5abb7812053937",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "sih-25057"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}